fix: make comment author info left aligned

--- a/static/style.css
+++ b/static/style.css
@@ -685,6 +685,8 @@ main {
   flex-direction: column;
   justify-content: center;
   align-content: center;
+
+  text-align: left;
 }
 
 .author-comment-body {
